my-app/src/components/Experience.css
/* Experience.css */
#experience {
  font-family: 'Times New Roman', serif, monospace, sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px;
  text-align: center;
}

#experience h2 {
  text-align: left;
  margin: 5px;
  font-size: calc(15px + 3vw);
  color: black;
}

.textContainer {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
  margin: 20px;
  width: 80%;
}

/* .container {
  padding: 20px;
  font-family: Arial, sans-serif;
} */

/* .header {
  text-align: center;
  margin-bottom: 20px;
} */

/* .logo {
  width: 50px;
  height: 50px;
  margin-right: 20px;
}

.title {
  font-size: 1.5em;
  margin: 0;
} */

/* .company {
  font-size: 1.2em;
  color: #555;
}

.duration {
  font-size: 1em;
  color: #888;
}

.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  background-color: #fff;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  max-width: 500px;
  text-align: center;
}

.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
} */

@media (min-width: 768px) {
  #experience {
    flex-direction: row;
    justify-content: space-around;
    text-align: left;
  }

  .textContainer {
    width: 40%;
    margin: 20px;
  }
}

